--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "http-proxy-middleware": "^2.0.1",
     "massive": "^6.6.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
