--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "main": "server/index.js",
-  "proxy": "http://localhost:4000",
+  "url": "https://monkidex.herokuapp.com/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.3.0-beta3",
     "@fortawesome/free-regular-svg-icons": "^6.0.0-beta3",
