--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monkidex",
   "version": "0.1.0",
   "private": true,
-  "main": "server/index.js",
+  "main": "./server/index.js",
   "url": "https://monkidex.herokuapp.com/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.3.0-beta3",
@@ -34,7 +34,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "node server/index.js",
+    "start": "node server/index.js && npm build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
