--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.3.0",
     "aws-sdk": "^2.806.0",
-    "axios": "^0.21.0",
+    "axios": "^0.21.4",
     "bcrypt": "^5.0.0",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
@@ -34,8 +34,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "node server/index.js && npm build",
-    "go": " react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
