--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "massive": "^6.6.1",
-    "nodemon": "^2.0.15",
+    "nodemon": "^1.14.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.4",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^4.0.5",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
